tests/NormalTests/paczka1/fuzzy1/14176617.err
Error in line 5: UWok A411 -2,8
Error in line 4: h0fLX9 A411 65,2
Error in line 9: kN09drj A318 47,4
Error in line 12: lZcA56zq A135 99,8
Error in line 13: UWok A411 144,9
Error in line 18: UWok A318 24,0
Error in line 24: lZcA56zq A411 26,9
Error in line 34: lZcA56zq A318 60,6
Error in line 36: UWok A985 36,4
